<resources>
    <!--  Version strings  -->
    <string name="opencv_version_text">OpenCV ver.: %s</string>
    <string name="app_version_text">Meter Reader %s</string>

    <!--  UI Elements  -->
    <string name="app_name">Meter Reader</string>
    <string name="gas_meter_report_title">Gázóra állás leolvasás</string>
    <string name="electric_meter_report_title">Villanyóra állás leolvasás</string>
    <string name="dial_frame">Dial frame</string>
    <string name="gallery_title">Válasszon ki egy képet</string>
    <string name="take_photo_title">Fénykép készítése</string>
    <string name="take_photo_description">Készítsen fényképet a mérőállás leolvasásához.</string>
    <string name="progress_frame_detection">Óraállás helyének meghatározása…</string>
    <string name="progress_dial_value_detection">Számjegyek leolvasása…</string>
    <string name="progress_finalization">Eredményképek mentése…</string>
    <string name="dial_value_detection_error">Hiba történt a számjegyek leolvasása közben.</string>
    <string name="frame_detection_error">Hiba történt a leolvasás helyének meghatározása közben.</string>
    <string name="try_again">Próbálja újból.</string>
    <string name="results">Eredmény</string>
    <string name="options">Beállítások</string>
    <string name="results_description_gas">Sikeres mérőóra leolvasás!\nA dekektált érték: %1$.3f</string>
    <string name="results_description_elec">Sikeres mérőóra leolvasás!\nA dekektált érték: %1$.1f</string>
    <string name="intent_data_error">Hiba történt az adatok kiolvasása közben.</string>
    <string name="take_photo">Fénykép készítése</string>
    <string name="send_report">Eredmények mentése</string>
    <string name="send_report_success">Eredmények mentése sikeres.</string>
    <string name="send_report_failed">Hiba történt az eredmények mentése közben.</string>
    <string name="retry">Próbálkozás újból</string>
    <string name="result_images">Eredményképek</string>
    <string name="reset_defaults">Alapértelmezett beállítások</string>
    <string name="reset_defaults_title">Beállítások visszaállítása</string>
    <string name="reset_defaults_description">Alapértelmezés visszaállítása a következőhöz:</string>
    <string name="settings">Beállítások</string>

    <!-- Drawables -->
    <drawable name="dial_frame_gas">@drawable/number_dial</drawable>
    <drawable name="dial_frame_electric">@drawable/number_dial_electric</drawable>

    <!--  Error messages  -->
    <string name="error_code_101">Nem sikerült meghatározni az utolsó három számjegyet körülvevő vörös keret helyét.</string>
    <string name="error_code_103">Nem sikerült meghatározni az egész számjegyeket befoglaló téglalapot.</string>
    <string name="error_code_104">Nem sikerült detektálni az összes számjegyet.</string>
    <string name="error_code_105">A számjegy felismerés hibás cimkét adott vissza.</string>
    <string name="error_code_106">Nem sikerült detektálni egyetlen számjegyet sem.</string>
    <string name="error_code_201">Nem sikerült meghatározni az utolsó, vörös háttérszínű számjegy helyét.</string>
    <string name="error_code_202">Hiba történt az utolsó, vörös háttérszínű számjegy befoglaló téglalapjának meghatározásakor.</string>
    <string name="results_failed_code">Hiba %1$d</string>
    <string name="error_dropdown_header">Részletek</string>
    <string name="error_code_notfound">Ismeretlen hibakód.</string>

    <!--  Config parameter headers  -->
    <string name="gas_config_title">Gázóra beállítások</string>
    <string name="electric_config_title">Villanyóra beállítások</string>
    <string name="setting_header_red_dial_frame_title">Vörös keret meghatározása</string>
    <string name="setting_header_last_digit_frame">Utolsó számjegy meghatározása</string>
    <string name="setting_header_color_correction">Színkorrekció</string>
    <string name="setting_header_search_dials">Számlapkeret keresése</string>
    <string name="setting_header_dial_detection">Számjegy detekció</string>

    <!--  Config parameters  -->
    <string name="setting_min_dial_area">Minimális kontúr terület (px):</string>
    <string name="setting_max_line_distance">Maximális vonal távolság:</string>
    <string name="setting_max_skewness_deg">Maximális dőlésszög (fok):</string>
    <string name="setting_digit_frame_max_extension_count">Keret kiterjesztés iteráció limit:</string>
    <string name="setting_digit_frame_extension_multiplier">Keret kiterjesztés nagysága (%):</string>
    <string name="setting_max_black_intensity_ratio">Keret kiterjesztés érzékenysége:</string>
    <string name="setting_dial_frame_width_multiplier">Vörös keret hosszabbítás szorzó:</string>
    <string name="setting_min_rectangularity">Minimális téglalapszerűség (%):</string>
    <string name="setting_color_correction">Színkorrekció alkalmazása:</string>
    <string name="setting_digit_max_width_ratio">Számjegy max. szélesség (%):</string>
    <string name="setting_digit_max_height_ratio">Számjegy max. magasság (%):</string>
    <string name="setting_digit_height_width_ratio_min">Számjegy magasság/szélesség arány min. (%):</string>
    <string name="setting_height_width_ratio_max">Számjegy magasság/szélesség arány max. (%):</string>
    <string name="setting_digit_min_border_dist">Kontúr távolság a szélektől min. (%):</string>
    <string name="setting_digit_black_border_thickness">Kontúr levágási keret vastagsága:</string>
    <string name="setting_max_circularity">Maximális körszerűség (%):</string>
    <string name="setting_gamma">Gamma:</string>

    <!--  Parameter descriptions  -->
    <string name="setting_min_dial_area_info">
        A vörös keret befoglaló kontúrjának területe legalább ennyi pixel kell, hogy legyen.\n\n
        Az ettől kisebb területtel rendelkező kontúrok ki lesznek szűrve.
    </string>
    <string name="setting_min_dial_area_info_electric">
        Az utolsó (vörös hátterű) számjegy befoglaló kontúrjának területe legalább ennyi pixel kell, hogy legyen.\n\n
        Az ettől kisebb területtel rendelkező kontúrok ki lesznek szűrve.
    </string>
    <string name="setting_min_rectangularity_info">
        Az utolsó (vörös hátterű) számjegy befoglaló kontúrjának minimális téglalapszerűsége.\n\n
        Az ennél kisebb téglalapszerűségi értékkel rendelkező kontúrok ki lesznek szűrve.
    </string>
    <string name="setting_max_circularity_info">
        A vörös keret befoglaló kontúrjának maximális körszerűsége.\n\n
        Az ennél nagyobb körszerűségi értékkel rendelkező kontúrok ki lesznek szűrve.
    </string>
    <string name="setting_dial_frame_width_multiplier_info">
        A detektált vörös keret befoglaló téglalapjának szélessége ezzel az arányszámmal lesz megszorozva.\n\n
        Ideális esetben egy olyan téglalapot kell kapnunk, ami lefedi az összes (többi) számjegyet.
    </string>
    <string name="setting_dial_frame_width_multiplier_info_electric">
        A detektált utolsó (vörös hátterű) számjegy befoglaló téglalapjának szélessége ezzel az arányszámmal lesz megszorozva.\n\n
        Ideális esetben egy olyan téglalapot kell kapnunk, ami lefedi az összes (többi) számjegyet.
    </string>
    <string name="setting_max_skewness_deg_info">
        Az eredeti képen lévő vörös keret dőlésszöge ennyivel térhet el a vízszintestől.
    </string>
    <string name="setting_max_skewness_deg_info_electric">
        Az eredeti képen a mérőóra maximális dőlésszöge a vízszinteshez képest.\n\n
        Ha a dőlésszög ennél nagyobb, sikertelen lesz a mérőhely detekciója.
    </string>
    <string name="setting_max_line_distance_info">
        Két vonal középpontjának maximális távolsága (Euklideszi).\n\n
        Az egymástól legfeljebb ennyi távolságra lévő vonalak "összevonásra" kerülnek, helyettük egy interpolációval kapott vonal lesz felvéve.
    </string>
    <string name="setting_max_black_intensity_ratio_info">
        Ha a vörös keretet befoglaló téglalap nyújtás után sem fedi le az összes számjegyet, további kiterjesztésre van szükség.\n\n
        Egy iteráció akkor kerül végrehajtásra, ha a téglalap alatti sötét pixelek aránya ettől az értéktől nagyobb.
    </string>
    <string name="setting_max_black_intensity_ratio_info_electric">
        Ha az utolsó (vörös hátterű) számjegy befoglaló téglalapja nyújtás után sem fedi le az összes számjegyet, további kiterjesztésre van szükség.\n\n
        Egy iteráció akkor kerül végrehajtásra, ha a téglalap alatti sötét pixelek aránya ettől az értéktől nagyobb.
    </string>
    <string name="setting_digit_frame_extension_multiplier_info">
        Iterációnként ezzel az aránnyal nő meg a számlapkeretet befoglaló téglalap szélessége.
    </string>
    <string name="setting_digit_frame_max_extension_count_info">
        Ez a paraméter mondja meg, hogy maximálisan hányszor lehet kiterjeszteni a számlapkeretet befoglaló téglalapot.
    </string>
    <string name="setting_color_correction_info">
        Színkorrekció alkalmazása a számplapkeret kivetített képén a számjegyek detektálása előtt (Opcionális).\n\n
        Rossz fényviszonyok mellett készült kép esetén ajánlott a használata.
    </string>
    <string name="setting_gamma_info">A színkorrekció során a gamma kitevő értéke.</string>
    <string name="setting_digit_max_width_ratio_info">
        Egy számjegyet tartalmazó kontúr szélessége hány százalékát foglalhatja el maximum a számlapkeret kivetített képének szélességének.\n
        Az ennél szélesebb kontúrok ki lesznek szűrve.\n\n
        Ideális esetben pl. egy jó beállítás lehet 8 számjegyű számlap esetében 1/8=0.125
    </string>
    <string name="setting_digit_max_height_ratio_info">
        Egy számjegyet tartalmazó kontúr magassága hány százalékát foglalja el maximum a számlapkeret kivetített képének magasságának\n
        Az ennél magasabb kontúrok ki lesznek szűrve.\n\n
        A kivetített kép teteje és alja ideális esetben a számlap fekete sávjának szélei.
    </string>
    <string name="setting_digit_height_width_ratio_min_info">
        Egy számjegyet tartalmazó kontúr magasságának aránya minimálisan mennyi kell legyen a szélességéhez képest.\n\n
        Az ettől eltérő értékkel rendelkező kontúrok ki lesznek szűrve.
    </string>
    <string name="setting_height_width_ratio_max_info">
        Egy számjegyet tartalmazó kontúr magasságának aránya maximálisan mennyi kell legyen a szélességéhez képest.\n\n
        Az ettől eltérő értékkel rendelkező kontúrok ki lesznek szűrve.
    </string>
    <string name="setting_digit_min_border_dist_info">
        Egy számjegyet tartalmazó kontúr minimális távolsága a kivetített kép széleitől \n\n
        (alsó-felső és bal-jobb szélek esetében eltérő lesz az eredmény).
    </string>
    <string name="setting_digit_black_border_thickness_info">
        A számjegyeket tartalmazó kontúrok ideális esetben a kivetített kép közepén helyezkednek el.\n\n
        A kontúrok szűrésének egy módja, ha a kép széleihez közeli részt kimaszkoljuk, ezzel a paraméterrel állítható a maszkolás vastagsága.
    </string>

    <!--  Result image categories  -->
    <string name="category_frame_detection_gas">Vörös keret helye</string>
    <string name="category_frame_detection_electric">Vörös számjegy helye</string>
    <string name="category_dial_search">Számlapkeret keresése</string>
    <string name="category_skewness_correction">Ferdeség korrekció</string>
    <string name="category_color_correction">Színkorrekció</string>
    <string name="category_digit_detection">Számjegy detektció</string>

    <!--  Meter type categories  -->
    <string name="meter_type_gas">Gázóra</string>
    <string name="meter_type_electric">Villanyóra</string>
    <string name="category_all">Mind</string>

    <!--  Misc -->
    <string name="electric_dial_frame_desc">Villanyóra kép keret</string>
    <string name="gas_dial_frame_desc">Gázóra kép keret</string>
    <string name="error_details_dropdown_desc">Hiba részletek lenyíló menü</string>
</resources>