<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reportConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity">

    <RelativeLayout
        android:id="@+id/dialRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <ImageView
            android:id="@+id/dialFrame"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:clickable="false"
            android:contentDescription="@string/dial_frame"
            android:focusable="false" />

        <LinearLayout
            android:id="@+id/dials_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <include layout="@layout/dial" />

            <include layout="@layout/dial" />

            <include layout="@layout/dial" />

            <include layout="@layout/dial" />

            <include layout="@layout/dial" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <include layout="@layout/dial" />

            <include layout="@layout/dial" />

            <include layout="@layout/dial" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialRelativeLayout"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/reportButtonsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/takePhotoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="100"
                android:text="@string/take_photo"
                app:icon="@drawable/ic_plus"
                app:iconGravity="textEnd"
                app:iconPadding="10dp" />

            <Button
                android:id="@+id/galleryButton"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:isScrollContainer="false"
                app:icon="@drawable/ic_gallery"
                app:iconGravity="textStart" />
        </LinearLayout>

        <Button
            android:id="@+id/sendReportButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/send_report" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>